[NM-132] started styling

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -692,7 +692,7 @@ li.nabi-list-style-position-inside {
 
 /*JennaSue title*/
 .nabi-jennasue-title {
-	font-family: 'JennaSue';
+	font-family: 'JennaSue' !important;
 	font-size: 42px !important;
 }
 
@@ -1131,7 +1131,7 @@ li.nabi-list-style-position-inside {
 	}
 	/*JennaSue title*/
 	.nabi-jennasue-title {
-		font-size: 50px !important;
+		font-size: 55px !important;
 	}
 	/*Homepage*/
 	#banner {
