[NM-132] added redux config

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -155,6 +155,10 @@ p.nabi-color-orange {
 }
 
 /*FONT WEIGHT*/
+.nabi-text-normal {
+	font-weight: 400 !important;
+}
+
 .nabi-text-mediumbold {
 	font-weight: 500 !important;
 }
