--- a/assets/scss/StripePaymentForm.scss
+++ b/assets/scss/StripePaymentForm.scss
@@ -1,10 +1,6 @@
-.CardField-input-wrapper {
-  height: 55px;
-}
-
-.ElementsApp input {
-  color: #717a8a !important;
-  padding: 17px 18px;
-  background: #f3f6f9;
-  border-radius: 5px;
+#card-element {
+  padding: 17px 11px !important;
+  background: #f3f6f9 !important;
+  border-radius: 5px !important;
+  border: 2px solid #ebeef1 !important;
 }
