--- a/assets/scss/Header.scss
+++ b/assets/scss/Header.scss
@@ -1,11 +1,13 @@
 .nabi-header-menu {
 	position: absolute !important;
-	top: 9% !important;
+  top: 6% !important;
+  padding-left: 12px;
 }
 
-/* iPads (landscape) ----------- */
-@media only screen and (min-width: 768px) {
+@media only screen and (min-width: 960px) {
   .nabi-header-menu {
     top: 45% !important;
+    padding-left: 0px;
+    
   }
 }
