[NM-164] how it works

--- a/assets/scss/PageBanner.scss
+++ b/assets/scss/PageBanner.scss
@@ -4,17 +4,26 @@
   height: 250px;
   display: flex;
   flex-direction: column;
-  align-items:center;
+  align-items: center;
   justify-content: center;
-  color: white
+  color: white;
 }
 
 .page-banner-title {
-  font-size: 50px;
+  font-size: 30px;
   font-weight: 700;
 }
 
 .page-banner-description {
-  font-size: 40px;
+  font-size: 20px;
   font-weight: 600;
+}
+
+@media only screen and (min-width: 960px) {
+  .page-banner-title {
+    font-size: 50px;
+  }
+  .page-banner-description {
+    font-size: 40px;
+  }
 }
