--- a/assets/scss/PageBannerCta.scss
+++ b/assets/scss/PageBannerCta.scss
@@ -9,6 +9,12 @@
 }
 
 .page-banner-cta-description {
-  font-size: 30px;
+  font-size: 20px;
   font-weight: 600;
+}
+
+@media only screen and (min-width: 960px) {
+  .page-banner-cta-description {
+    font-size: 30px;
+  }
 }
