--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -871,6 +871,20 @@ li.nabi-list-style-position-inside {
 	margin-top: 45px !important;
 }
 
+.item-card {
+	-webkit-transition: -webkit-box-shadow 1s;
+  -moz-transition: -moz-box-shadow 1s;
+  -o-transition: box-shadow 1s;
+	transition: box-shadow 1s;
+}
+
+.item-card:hover {
+	-webkit-box-shadow: 0px 2px 6px 0px rgba(0, 0, 0, 0.10);
+	-moz-box-shadow: 0px 2px 6px 0px rgba(0, 0, 0, 0.10);
+	box-shadow: 0px 2px 6px 0px rgba(0, 0, 0, 0.10);
+	cursor: pointer;
+}
+
 .completed-button {
 	background-image: linear-gradient(to left , #06C3E1 50%, #0695B3 51%);
 	background-image: -o-linear-gradient(to left , #06C3E1 50%, #0695B3 51%);
