--- a/assets/scss/FreeLesson.scss
+++ b/assets/scss/FreeLesson.scss
@@ -1,4 +1,10 @@
 .free-trial-icon {
-  width: 200px;
+  width: 100px;
   border-radius: 50%;
+}
+
+@media (min-width: 960px) {
+  .free-trial-icon {
+    width: 200px;
+  }
 }
