[NO-TICKET] fixed bugs

--- a/assets/scss/VettingProcess.scss
+++ b/assets/scss/VettingProcess.scss
@@ -1,9 +1,9 @@
-.vetting-process-title {
+p.vetting-process-title {
   font-size: 30px;
 }
 
 @media (min-width: 960px) {
-  .vetting-process-title {
+  p.vetting-process-title {
     font-size: 50px;
   }
 }
