[NABI-153] referral shareable on different channels
* added some styles

* added more styles and actions to share link

* removed some elements

* more editions

* change constant

* added desing

* added whatsaspp

* minors chages

* removed alert

* added text with the shareable link

* more editions

* added more editions

* added more conditionals editions

* added more conditionals

* more editions

* more minors editions

* added more editions

* [NM-153] css and markup fixes

* [NM-153] constants edits

Co-authored-by: iamvane <vane.charles24@gmail.com>

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -543,7 +543,7 @@ li.nabi-list-style-position-inside {
 }
 
 .nabi-text-color-red {
-  color: #fb7e6a;
+  color: #fb7e6a !important;
 }
 
 .nabi-text-size-medium {
