--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -6,6 +6,7 @@
 @font-face {
 	font-family: 'Montserrat';
 	src: url('https://fonts.googleapis.com/css?family=Montserrat: 400,500,600,800');
+	font-display: swap;
 }
 
 body {
