[NO-TICKET] updated contact us page, added contact form to footer

--- a/assets/scss/Footer.scss
+++ b/assets/scss/Footer.scss
@@ -1,5 +1,5 @@
 #footer {
-  background: #F0F3F6;
+  background: #fef7e5;
   border-top: 1px solid #e6e7e8;
   padding-bottom: 50px;
 }
@@ -16,3 +16,7 @@ div#footer p a {
 #footer a:hover {
   color: #06c3e1;
 }
+
+// div#hubspotFormFooter {
+//   padding: 20px;
+// }
