[NO-TICKET] last fixes

--- a/assets/scss/FreeLandingPage.scss
+++ b/assets/scss/FreeLandingPage.scss
@@ -10,6 +10,11 @@ header {
   width: 100%;
 }
 
+.features-wrapper {
+  width: 100%;
+  margin: 0px;
+}
+
 @media (min-width: 960px) {
   .header-wrapper {
     height: 339px;
@@ -26,7 +31,7 @@ header {
     padding-top: 10px;
   }
   .nabi-container.nabi-margin-bottom-small.banner-text-wrapper p {
-    line-height: 47px;
+    line-height: 37px;
     font-size: 18px !important;
   }
   .nabi-landing-image-wrapper {
@@ -36,11 +41,5 @@ header {
 
   p.nabi-landing-font-large-md {
     font-size: 18px !important;
-  }
-}
-
-@media (min-width: 1600px) {
-  .header-wrapper {
-    width: 1200px;
   }
 }
