[NO-TICKET] h1 edits

--- a/assets/scss/FreeLandingPage.scss
+++ b/assets/scss/FreeLandingPage.scss
@@ -15,6 +15,10 @@ header {
   margin: 0px;
 }
 
+h1 {
+  font-size: 26px;
+}
+
 @media (min-width: 960px) {
   .header-wrapper {
     height: 339px;
