no-ticket-real-last-edit

--- a/assets/scss/FreeLandingPage.scss
+++ b/assets/scss/FreeLandingPage.scss
@@ -11,8 +11,8 @@ header {
 }
 
 .features-wrapper {
-  width: 100%;
-  margin: 0px;
+  width: 100% !important;
+  margin: 0px !important;
 }
 
 h1 {
