[NM-267] trial progress

--- a/assets/scss/StripePaymentForm.scss
+++ b/assets/scss/StripePaymentForm.scss
@@ -1,4 +1,4 @@
-#card-element {
+div#card-element {
   padding: 17px 11px !important;
   background: #f3f6f9 !important;
   border-radius: 5px !important;
