--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1208,6 +1208,10 @@ li.nabi-list-style-position-inside {
 		margin-right: 10px !important;
 	}
 
+	.nabi-margin-left-xsmall-md {
+		margin-left: 10px !important;
+	}
+
 	.nabi-margin-top-small-md {
 		margin-top: 20px !important;
 	}
