--- a/assets/scss/ProfileHeader.scss
+++ b/assets/scss/ProfileHeader.scss
@@ -2,3 +2,43 @@
   width: 140px !important;
   height: 140px !important;
 }
+
+.play-video-wrapper {
+  position: relative;
+  top: 0;
+  left: 0;
+}
+
+.play-video-avatar {
+  width: 120px !important;
+  height: 120px !important;
+  position: relative;
+  top: 0;
+  left: 0;
+}
+
+.play-video-icon {
+  position: absolute;
+  top: 40px;
+  left: 38%;
+  width: 64px;
+  cursor: pointer;
+}
+
+@media only screen and (min-width: 375px) {
+  .play-video-icon {
+    left: 40%;
+  }
+}
+
+@media only screen and (min-width: 768px) {
+  .play-video-icon {
+    left: 44%;
+  }
+}
+
+@media only screen and (min-width: 960px) {
+  .play-video-icon {
+    left: 28%;
+  }
+}
