[NO-TICKET] updated homepage banner

--- a/assets/scss/Banner.scss
+++ b/assets/scss/Banner.scss
@@ -7,6 +7,9 @@
 	background-position: center;
 }
 
+#banner h1 {
+	text-shadow: 0.5;
+}
 #banner .container {
 	padding-left: 25px;
 	padding-right: 25px;
