add icon to refer a friend

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -156,6 +156,10 @@ p.nabi-color-orange {
     left: 120px;
 }
 
+.nabi-mobile-icon-large {
+	width: 40px;
+}
+
 /*DISPLAY*/
 .nabi-display-block {
   display: block !important;
