--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -159,6 +159,12 @@ p.nabi-color-orange {
 	width: 40px;
 }
 
+/* DESKTOP MENU*/
+.nabi-deskop-menu-icon {
+	position: absolute;
+    top: 35px;
+}
+
 /*DISPLAY*/
 .nabi-display-block {
   display: block !important;
