--- a/assets/scss/PhoneValidationForm.scss
+++ b/assets/scss/PhoneValidationForm.scss
@@ -7,6 +7,7 @@
   font-family: 'Montserrat', sans-serif !important;
   line-height: 1.1875em;
   font-size: 1rem;
+  width: 100%;
 }
 
 .international-phone-input .PhoneInputCountryIconImg {
