--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -913,132 +913,8 @@ li.nabi-list-style-position-inside {
 	height: 18px !important;
 }
 
-.completed-button {
-	background-image: linear-gradient(to left , #06C3E1 50%, #0695B3 51%);
-	background-image: -o-linear-gradient(to left , #06C3E1 50%, #0695B3 51%);
-	background-image: -moz-linear-gradient(to left , #06C3E1 50%, #0695B3 51%);
-	background-image: -webkit-linear-gradient(to left , #06C3E1 50%, #0695B3 51%);
-	background-image: -ms-linear-gradient(to left , #06C3E1 50%, #0695B3 51%);
-}
-
-.completed-button-0 {
-	background-image: -webkit-gradient(
-		linear,
-		left bottom,
-		right bottom,
-		color-stop(1, #0695B3),
-		color-stop(1, #0695B3)
-	);
-}
-
-.completed-button-9 {
-	background-image: -webkit-gradient(
-		linear,
-		left bottom,
-		right bottom,
-		color-stop(0.09, #06C3E1),
-		color-stop(0.09, #0695B3)
-	);
-}
-
-.completed-button-18 {
-	background-image: -webkit-gradient(
-		linear,
-		left bottom,
-		right bottom,
-		color-stop(0.18, #06C3E1),
-		color-stop(0.18, #0695B3)
-	);
-}
-
-.completed-button-27 {
-	background-image: -webkit-gradient(
-		linear,
-		left bottom,
-		right bottom,
-		color-stop(0.27, #06C3E1),
-		color-stop(0.27, #0695B3)
-	);
-}
-
-.completed-button-36 {
-	background-image: -webkit-gradient(
-		linear,
-		left bottom,
-		right bottom,
-		color-stop(0.36, #06C3E1),
-		color-stop(0.36, #0695B3)
-	);
-}
-
-.completed-button-45 {
-	background-image: -webkit-gradient(
-		linear,
-		left bottom,
-		right bottom,
-		color-stop(0.45, #06C3E1),
-		color-stop(0.45, #0695B3)
-	);
-}
-
-.completed-button-56 {
-	background-image: -webkit-gradient(
-		linear,
-		left bottom,
-		right bottom,
-		color-stop(0.56, #06C3E1),
-		color-stop(0.56, #0695B3)
-	);
-}
-
-.completed-button-64 {
-	background-image: -webkit-gradient(
-		linear,
-		left bottom,
-		right bottom,
-		color-stop(0.64, #06C3E1),
-		color-stop(0.64, #0695B3)
-	);
-}
-
-.completed-button-73 {
-	background-image: -webkit-gradient(
-		linear,
-		left bottom,
-		right bottom,
-		color-stop(0.73, #06C3E1),
-		color-stop(0.73, #0695B3)
-	);
-}
-
-.completed-button-82 {
-	background-image: -webkit-gradient(
-		linear,
-		left bottom,
-		right bottom,
-		color-stop(0.82, #06C3E1),
-		color-stop(0.82, #0695B3)
-	);
-}
-
-.completed-button-91 {
-	background-image: -webkit-gradient(
-		linear,
-		left bottom,
-		right bottom,
-		color-stop(0.91, #06C3E1),
-		color-stop(0.91, #0695B3)
-	);
-}
-
-.completed-button-100 {
-	background-image: -webkit-gradient(
-		linear,
-		left bottom,
-		right bottom,
-		color-stop(100, #06C3E1),
-		color-stop(100, #0695B3)
-	);
+.nabi-z-index-1 {
+	z-index: 1;
 }
 
 /* iPhones(landscape) ----------- */
