[NM-309] mobile studio slide
* [NM-309] implement studio mobile slide

* [NM-309] implement studio mobile slide

* [NM-309] implement studio mobile slide

* add icon to refer a friend

* change mobile logout button position

* add menu and slide bar for desktop

* Modify collapsible side bar for student parent and instructor

* add icon to refer a friend

* add menu and slide bar for desktop

* Modify studio collapsible bar to include options for instructors on request page and dashboard

* [NM-309] last edits

Co-authored-by: Vanessa Charles Thompson <vane.charles24@gmail.com>

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -116,6 +116,73 @@ p.nabi-color-orange {
 	cursor: pointer !important;
 }
 
+/*MOBILE WIDTH*/
+
+@media only screen and (max-width: 768px) {
+	.nabi-mobile-width {
+		width: 80%;
+	}
+}
+
+/*MOBILE*/
+.nabi-mobile-drawer-header-container {
+	width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+.nabi-mobile-drawer-image-link {
+	display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.nabi-mobile-drawer-image{
+	width: 50px;
+}
+
+.nabi-mobile-item {
+	padding: 10px 25px 10px 25px !important;
+}
+
+.nabi-mobile-typography {
+	color: #717a8a !important;
+	font-weight: 500;
+}
+
+.nabi-mobile-logout-button-wrapper {
+	display: flex;
+    justify-content: center;
+}
+
+.nabi-mobile-button-wrapper {
+	display: flex;
+    justify-content: center;
+	padding: 10px;
+    height: 40px;
+}
+
+.nabi-mobile-icon-large {
+	width: 40px;
+}
+
+/* DESKTOP MENU*/
+.nabi-deskop-menu-icon {
+	position: absolute;
+	top: 35px;
+	left: 20px;
+}
+
+.nabi-mobile-icon-large {
+	width: 40px;
+}
+
+/* DESKTOP MENU*/
+.nabi-deskop-menu-icon {
+	position: absolute;
+    top: 35px;
+}
+
 /*DISPLAY*/
 .nabi-display-block {
   display: block !important;
@@ -588,8 +655,8 @@ li.nabi-list-style-position-inside {
 
 .nabi-header-button {
 	position: absolute !important;
-	top: 9% !important;
-	right: 20px !important;
+    top: 30px;
+    right: 20px !important;
 }
 
 .nabi-responsive-image {
