--- a/assets/css/overrides.css
+++ b/assets/css/overrides.css
@@ -108,3 +108,22 @@
 .MuiRadio-root.Mui-checked {
   color: #06c3e1 !important;
 }
+
+.MuiChip-root {
+  color: #717a8a !important;
+  padding: 26px 18px !important;
+  background: #f3f6f9 !important;
+  border-radius: 4px !important;
+  font-size: 0.875rem !important;
+  border: 2px solid #ebeef1 !important;
+}
+
+.MuiChip-colorPrimary {
+  color: #fff !important;
+  background-color: #06c3e1 !important;
+}
+
+.MuiChip-label {
+  font-size: 1rem !important;
+  font-family: 'Montserrat', sans-serif !important;
+}
