[NM-254] more amazing progress

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -352,8 +352,8 @@ li.nabi-list-style-position-inside {
 .nabi-padding-remove {
 	padding: 0px !important;
 }
-.nabi-padding-small {
-	padding: 20px
+.nabi-padding-xsmall {
+	padding: 10px
 }
 
 .nabi-padding-small {
