--- a/assets/scss/ChildForm.scss
+++ b/assets/scss/ChildForm.scss
@@ -2,9 +2,31 @@
   padding: 26px 0px !important;
 }
 
+.instrument-select select {
+  margin-left: 20%;
+}
+
+.instrument-select.instrument-select-true,
+.instrument-select.instrument-select-true select {
+  background-color: #06c3e1 !important;
+  color: #ffffff !important;
+}
+
 @media only screen and (max-width: 375px) {
   .level-chips span {
     font-size: .8rem !important;
     padding: 0px;
+  }
+}
+
+@media only screen and (min-width: 768px) {
+  .instrument-select select {
+    margin-left: 34%;
+  }
+}
+
+@media only screen and (min-width: 960px) {
+  .instrument-select select {
+    margin-left: 16%;
   }
 }
