[NM-310] implemented instructor studio

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -125,6 +125,11 @@ p.nabi-color-orange {
 }
 
 /*MOBILE*/
+
+header {
+  background: #ffffff;
+}
+
 .nabi-mobile-drawer-header-container {
 	width: 100%;
     display: flex;
