[NO-TICKET] other fixes

--- a/assets/scss/LessonCard.scss
+++ b/assets/scss/LessonCard.scss
@@ -1,4 +1,6 @@
-.lesson-card-avatar {
-  width: 70px !important;
-  height: 70px !important;
+@media (min-width: 768px) {
+  .lesson-card-avatar {
+    width: 70px !important;
+    height: 70px !important;
+  }
 }
