--- a/assets/scss/StudioParent.scss
+++ b/assets/scss/StudioParent.scss
@@ -1,10 +1,12 @@
 .studio-tabs {
   border-radius: 17px;
 }
-.studio-tabs .MuiTabs-root{
+.studio-tabs .MuiTabs-root {
   background: #06c3e1 !important;
   padding: 5px 10px;
   border-radius: 17px;
+  max-width: 264px !important;
+  min-width: 72px !important;
 }
 
 .studio-tabs .MuiTab-root,
@@ -19,3 +21,16 @@
 #lessons-table .MuiTableCell-root {
   padding: 17px 4px;
 }
+
+
+@media (min-width: 1200px) {
+  .recognized-item {
+    width: 147px;
+    height: 147px;
+  }
+
+  .studio-tabs .MuiTabs-root {
+    min-width: 160px !important;
+  }
+}
+
