[NM-363] Render students in instructor studio

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -205,12 +205,16 @@ header {
   display: none !important;
 }
 
+.nabi-flex-column {
+  flex-direction: column !important;
+}
+
 .nabi-display-flex {
   display: flex !important;
 }
 
 .nabi-flex-align-center {
-  align-items: center;
+  align-items: center !important;
 }
 
 .nabi-flex-justify-center {
