--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -445,7 +445,7 @@ li.nabi-list-style-position-inside {
 	padding: 0px !important;
 }
 .nabi-padding-xsmall {
-	padding: 10px
+	padding: 10px !important;
 }
 
 .nabi-padding-small {
