--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -217,6 +217,10 @@ header {
   align-items: center !important;
 }
 
+.nabi-flex-align-flex-end {
+  align-items: flex-end !important;
+}
+
 .nabi-flex-align-baseline {
   align-items: baseline;
 }
